--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@ url: https://caihanlin.com
 # Owner/author information
 owner:
   name: Hanlin Cai
-  avatar: hanlin.jpg
+  avatar: luyangyutong.jpg
   # bio: Two roads diverged in woods, I took the one less traveled by.
-  email: hanlin.cai@ieee.org
+  email: lyytong@stu.cqu.edu.cn
   cv: https://caihanlin.com/file/CV-HanlinCAI.pdf
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   twitter: lancecai2002
