--- a/_config.yml
+++ b/_config.yml
@@ -2,21 +2,21 @@ title: Luyangyu Tong
 # tagline: Here is personal website of Hanlin Cai. Powered by Jekyll, based on the Minimal Mistakes theme.
 # description: Two roads diverged in woods, I took the one less traveled by.
 #Comment out url when working locally to resolve base urls correctly
-url: https://caihanlin.com
+url: https://SuperGrapee.github.io
 
 # Owner/author information
 owner:
-  name: Hanlin Cai
+  name: Luyangyu Tong
   avatar: luyangyutong.jpg
   # bio: Two roads diverged in woods, I took the one less traveled by.
   email: lyytong@stu.cqu.edu.cn
   cv: https://caihanlin.com/file/CV-HanlinCAI.pdf
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
-  twitter: lancecai2002
-  github: GuangLun2000
-  linkedin: hanlincai
-  scholar: https://scholar.google.com/citations?user=8igSoWgAAAAJ
-  bilibili: 594030035
+  twitter: Grape_Nicholas
+  github: SuperGrapee
+  # linkedin: hanlincai
+  # scholar: https://scholar.google.com/citations?user=8igSoWgAAAAJ
+  # bilibili: 594030035
   researchgate: https://www.researchgate.net/profile/Hanlin-Cai
   zhihu: https://www.zhihu.com/people/chlire
   # facebook: caihanlin2002
