--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url: https://SuperGrapee.github.io
 # Owner/author information
 owner:
   name: Luyangyu Tong
-  avatar: formal.jpg
+  avatar: fav.png
   # bio: Two roads diverged in woods, I took the one less traveled by.
   email: lyytong@stu.cqu.edu.cn
   # cv: https://caihanlin.com/file/CV-HanlinCAI.pdf
