--- a/_config.yml
+++ b/_config.yml
@@ -72,7 +72,7 @@ kramdown:
 
 # disqus settings:
 disqus:
-  shortname: nicholastong
+  shortname: nicktong
 
 include: [".htaccess"]
 exclude: ["lib", "config.rb", "Capfile", "config", "log", "Rakefile", "Rakefile.rb", "tmp", "less", "minimal-mistakes.sublime-project", "minimal-mistakes.sublime-workspace"]
